--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/StuBehan/bank-tech-test#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.25.0",
     "eslint-plugin-jasmine": "^4.1.2",
     "jasmine": "^3.7.0",
